# Golden-Flop

./: .easignore  .gitignore  App.tsx  README.md  index.js  metro.config.js  package-lock.json  package.json
.expo/: settings.json
apps/mobile/: App.tsx  AppEntry.js  PREVIEW.md  TERMINAL-GUIDE.md  app.json  eas.json  metro.config.js  package.json  tsconfig.json
apps/mobile/animations/: types.ts  useCardDealAnimation.ts  useChipAnimation.ts  useShuffleAnimation.ts  useTableAnimations.ts  useWinnerAnimation.ts
apps/mobile/app/: _layout.tsx
apps/mobile/components/: PixelAvatar.tsx  themed-text.tsx
apps/mobile/constants/: card-assets.ts  card-images.ts  poker.ts  seeker.ts  solana.ts
apps/mobile/contexts/: auth-context.tsx  game-context.tsx  music-context.tsx  socket-provider.tsx  transition-context.tsx  wallet-context.tsx
apps/mobile/hooks/: use-all-in-hammer.ts  use-poker-haptics.ts  use-tactile-peek.ts  usePokerActions.ts  useTurnTimer.ts
apps/mobile/scripts/: split-card-sprite.js
apps/mobile/services/: AuthService.ts  DepositService.ts  PlaybackService.ts  SocketService.ts
apps/mobile/shims/: solana-kit.js
apps/mobile/stores/: useGameStore.ts  useLobbyStore.ts  useSocketStore.ts  (+1 more)
apps/program/: Anchor.toml  README.md
apps/program/programs/goldenflop/: Cargo.toml
apps/program/programs/goldenflop/src/: lib.rs  state.rs
apps/server/: .env.example  SOCKET_CONTRACT.md  docker-compose.yml  index.ts  jest.config.js  package.json  tsconfig.json
patches/: expo-av+16.0.8.patch  expo-keep-awake+15.0.8.patch  react-native-track-player+4.1.2.patch
(+63 files in other folders)
