[package]
name = "goldenflop"
version = "0.1.0"
description = "GoldenFlop poker - table state and session keys"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "goldenflop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
